# GameProject3

./: .gitignore  README.md
Server/Src/: CMakeLists.txt  Server.sln  StartServer.bat  Test.sln  buildDebug.bat  buildall.sh  builddebug.bat  buildrelease.bat  makefile  startall.sh  tolua++
Server/Src/AccountServer/: AccountManager.cpp  AccountManager.h  AccountMsgHandler.cpp  AccountMsgHandler.h  AccountObject.cpp  AccountPlayerObject.cpp  AccountPlayerObject.h  AccountProcManager.cpp  AccountProcManager.h  AccountServer.cpp  AccountServer.vcproj  AccountServer.vcxproj  AccountServer.vcxproj.filters  CMakeLists.txt  DBManager.cpp  DBManager.h  DBProcManager.cpp  DBProcManager.h  GameLogManager.cpp  GameLogManager.h  GameService.cpp  GameService.h  Main.cpp  makefile  stdafx.cpp  stdafx.h
Server/Src/CenterServer/: CMakeLists.txt  CenterMsgHandler.cpp  CenterMsgHandler.h  CenterServer.vcproj  CenterServer.vcxproj  CenterServer.vcxproj.filters  GameService.cpp  GameService.h  LogicSvrMgr.cpp  LogicSvrMgr.h  Main.cpp  makefile  stdafx.cpp  stdafx.h
Server/Src/ConfigData/: ConfigData.cpp  ConfigData.h  ConfigStruct.h  CppSQLite3.cpp  CppSQLite3.h  SkillStruct.h
Server/Src/DBServer/: CMakeLists.txt  DBAccountObject.cpp  DBAccountObject.h  DBConnection.cpp  DBConnection.h  DBManager.cpp  DBManager.h  DBMsgHandler.cpp  DBMsgHandler.h  DBProcManager.cpp  DBProcManager.h  DBRecordSet.cpp  DBServer.cpp  DBServer.vcproj  DBServer.vcxproj  DBServer.vcxproj.filters  DBStoredProcMgr.cpp  DBStoredProcMgr.h  DBWriterManager.cpp  DBWriterManager.h  GameService.cpp  GameService.h  Main.cpp  makefile  stdafx.cpp  stdafx.h
Server/Src/Debug/: AccountData.db  AccountServer.exp  DBServer.exp  GameData.db  GameData_A.db  GameServer.exp  LogServer.exp  LogicServer.exp  LoginServer.exp  ProxyServer.exp  StartServer.bat  StatisticsServer.exp  StopServer.bat  WorldServer.exp  servercfg.ini
Server/Src/GameServer/: CMakeLists.txt  ConfigData.cpp  ConfigData.h  GameServer.cpp  GameServer.vcproj  GameServer.vcxproj  GameServer.vcxproj.filters  GameService.cpp  GameService.h  GameStruct.h  GlobalData.cpp  GlobalData.h  Grid.cpp  Grid.h  GridManager.cpp  GridManager.h  Main.cpp  MonsterCreator.cpp  MonsterCreator.h  QuadTreeMgr.cpp  QuadTreeMgr.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneXmlMgr.cpp  SceneXmlMgr.h  makefile  stdafx.cpp  stdafx.h
Server/Src/HttpServer/: GameService.cpp  GameService.h  HttpMsgHandler.cpp  HttpMsgHandler.h  HttpServer.vcproj  HttpServer.vcxproj  HttpServer.vcxproj.filters  Main.cpp  makefile  stdafx.h
Server/Src/Linux/: Config.db  DBServer.ini  GameData.db  GameData_A.db  GameData_S.db  GameServer.ini  ProxyServer.ini  killall.sh  linux_build.md  servercfg.ini  startall.sh  startserver.sh
Server/Src/LogData/: AccountLog.h  LogLogin.h  LogStruct.h
Server/Src/LogServer/: CMakeLists.txt  GameService.cpp  GameService.h  LogMsgHandler.cpp  LogMsgHandler.h  LogServer.cpp  LogServer.vcproj  LogServer.vcxproj  LogServer.vcxproj.filters  Main.cpp  makefile  stdafx.h
Server/Src/LogicServer/: ActivityManager.cpp  ActivityManager.h  ActivityModule.cpp  ActivityModule.h  BagModule.cpp  BagModule.h  CMakeLists.txt  ChatManager.cpp  ChatManager.h  ConfigData.cpp  ConfigData.h  CopyModule.cpp  CopyModule.h  CounterModule.cpp  CounterModule.h  DataPool.cpp  DataPool.h  EquipModule.cpp  EquipModule.h  EventManager.cpp  EventManager.h  FriendModule.cpp  FriendModule.h  GameLogManager.cpp  GameLogManager.h  GameService.cpp  GameService.h  GameSvrMgr.cpp  GameSvrMgr.h  GemModule.cpp  GemModule.h  GlobalDataMgr.cpp  GlobalDataMgr.h  GmCommand.cpp  GmCommand.h  GroupMailMgr.cpp  GroupMailMgr.h  Guild.cpp  Guild.h  GuildManager.cpp  (+63 more)
Server/Src/LoginServer/: CMakeLists.txt  GameService.cpp  GameService.h  GiftCodeManager.cpp  GiftCodeManager.h  LogicSvrManager.cpp  LogicSvrManager.h  LoginClientMgr.cpp  LoginClientMgr.h  LoginMsgHandler.cpp  LoginMsgHandler.h  LoginServer.cpp  LoginServer.vcproj  LoginServer.vcxproj  LoginServer.vcxproj.filters  Main.cpp  WebCommandHandler.cpp  WebCommandMgr.cpp  WebCommandMgr.h  makefile  stdafx.h
Server/Src/Message/: Game_Define.pb.cc  Game_Define.pb.h  Msg_Bag.pb.cc  Msg_Bag.pb.h  Msg_Copy.pb.cc  Msg_Copy.pb.h  Msg_Game.pb.cc  Msg_Game.pb.h  Msg_ID.pb.cc  Msg_ID.pb.h  Msg_Login.pb.cc  Msg_Login.pb.h  Msg_LoginCltData.pb.cc  Msg_LoginCltData.pb.h  Msg_LoginDBData.pb.cc  Msg_LoginDBData.pb.h  Msg_Move.pb.cc  Msg_Move.pb.h  Msg_RetCode.pb.cc  Msg_RetCode.pb.h  Msg_Struct.h
Server/Src/ProxyServer/: CMakeLists.txt  GameService.cpp  GameService.h  Main.cpp  ProxyMsgHandler.cpp  ProxyMsgHandler.h  ProxyPlayerMgr.cpp  ProxyPlayerMgr.h  ProxyServer.cpp  ProxyServer.vcproj  ProxyServer.vcxproj  ProxyServer.vcxproj.filters  StaticPlayerMgr.cpp  StaticPlayerMgr.h  makefile  stdafx.cpp  stdafx.h
Server/Src/PublicData/: WebActionDef.h
Server/Src/Release/: AccountData.db  CenterServer.ini  Clear.bat  Config.db  GameData.db  LoginServer.ini  StatisticsServer.ini  WorldServer.ini  servercfg.ini
Server/Src/ServerData/: ActivityData.h  BagData.h  CopyData.h  CounterData.h  CounterID.h  EquipData.h  FriendData.h  GemData.h  GlobalData.h  GuildData.h  MailData.h  MountData.h  PartnerData.h  PayData.h  PetData.h  RoleData.h  SealData.h  ServerDefine.h  ServerStruct.h  SkillData.h  StoreData.h  TaskData.h
Server/Src/ServerEngine/: AVLTree.h  AstarFinder.cpp  AstarFinder.h  CMakeLists.txt  CheckMacroDefine.h  CommandDef.h  CommandLine.cpp  CommandLine.h  CommonConvert.cpp  CommonConvert.h  CommonEvent.h  CommonFunc.cpp  CommonFunc.h  CommonMath.cpp  CommonMath.h  CommonMsgHandler.cpp  CommonMsgHandler.h  CommonMsgQueue.h  CommonMsgQueueEx.h  CommonSocket.cpp  CommonSocket.h  CommonThreadFunc.cpp  CommonThreadFunc.h  CommonTime.cpp  CommonTime.h  CommonWorkThread.cpp  CommonWorkThread.h  ConfigFile.cpp  ConfigFile.h  Connection.cpp  Connection.h  CrashReport.cpp  CrashReport.h  CritSec.h  DFA.cpp  DFA.h  DataBuffer.cpp  DataBuffer.h  EventFuncManager.h  HttpParameter.cpp  (+37 more)
Server/Src/ServerEngine_asio/: CommonMsgHandler.h  CommonWorkThread.cpp  (+15 more)
(+1716 files in other folders)
